--- a/frontend/public/reset.css
+++ b/frontend/public/reset.css
@@ -364,3 +364,10 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+
+body {
+    font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial,
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
